<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".View.HouseFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/pictureHouse"
            android:layout_width="match_parent"
            android:layout_height="300dp" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="9dp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/hrv"
            android:layout_width="match_parent"
            android:layout_height="95dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:drawable/editbox_background_normal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textHouse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hello_blank_fragment"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textAlignment="textStart"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/mapbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/holo_green_light"
                android:src="@android:drawable/ic_dialog_map" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:src="@android:drawable/stat_sys_speakerphone" />
        </LinearLayout>


        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/opis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/edit_text"
            android:text="TextView"
            android:textAlignment="viewStart" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/typen"
                    android:textAlignment="textEnd" />

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/typezd"
                    android:textAlignment="textEnd" />

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/floorr"
                    android:textAlignment="textEnd" />

                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rooms"
                    android:textAlignment="textEnd" />

                <TextView
                    android:id="@+id/textView28"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mkv"
                    android:textAlignment="textEnd" />

                <TextView
                    android:id="@+id/textView29"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mkvz"
                    android:textAlignment="textEnd" />

                <TextView
                    android:id="@+id/textView30"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mkvk"
                    android:textAlignment="textEnd" />

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/area"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="юю"
                android:textColor="#00000000" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/typen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textAlignment="textStart" />

                <TextView
                    android:id="@+id/sdel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textAlignment="textStart" />

                <TextView
                    android:id="@+id/etaza"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textAlignment="textStart" />

                <TextView
                    android:id="@+id/rooms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/mkv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/mkvz"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textAlignment="textStart" />

                <TextView
                    android:id="@+id/mkvk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textAlignment="textStart" />

                <TextView
                    android:id="@+id/raion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textAlignment="textStart" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/Lat"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="TextView"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/Lng"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="TextView"
            android:visibility="invisible" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/comment"
            android:hint="Комментарий"/>
        <Button
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:text="Редактировать"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorLight"
            android:id="@+id/update"/>
        <Button
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:text="Удалить"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorRed"
            android:id="@+id/delete"/>
    </LinearLayout>

</ScrollView>
